--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"build": "babel src --extensions \".ts\" --out-dir build --copy-files --no-copy-ignored",
 		"dev": "ts-node-dev -r tsconfig-paths/register --respawn --ignore-watch node_modules --no-notify src/index.ts",
 		"start": "node build/index.js",
-		"typeorm": "ts-node -r tsconfig-paths/register ./node_modules/.bin/typeorm",
+		"typeorm": "typeorm-ts-node-commonjs -d ./src/configs/database.ts",
 		"db:migrate": "npm run typeorm migration:run",
 		"db:schema:sync": "npm run typeorm schema:sync",
 		"db:schema:drop": "npm run typeorm schema:drop",
